# doctesting

./: 404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/workflows/: execute_tests.yml  publish.yml
docs/: index.md
search/: search_index.json
tests/: test_chdoctest.py  test_doctest.py
