[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chdoctest"
description = "Documentation testing."
readme = "README.md"
authors = [{name = "Christian Hettlage", email = "c.hettlage@saao.nrf.ac.za"}]
requires-python = ">=3.9"
dependencies = []
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

[project.urls]
Homepage = "https://hettlage.github.io/doctesting"
Repository = "https://github.com/hettlage/doctesting"

[tool.setuptools.dynamic]
version = {attr = "chdoctest.__version__"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
docs = [
    "mike>=2.1.2",
    "mkdocs-material>=9.5.30",
]
test = [

    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
precommit = "pre-commit run --all-files"
test = "pytest"
testcov = "pytest --cov=src --cov-report=html --cov-report=term"
typecheck = "mypy src tests"
lint = {composite = ["precommit", "typecheck"]}
docs = "mkdocs build"
